unity-rancher/project-vs.02-17/project-grpc-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: project-grpc
  namespace: opr-develop
spec:
  gateways:
  - istio-system/mimeo-gateway
  hosts:
  - develop.opr.s3gis.be
  - web-develop.opr.s3gis.be
  http:
  - match:
    - headers:
        content-type:
          prefix: application/grpc
    retries:
      attempts: 3
      perTryTimeout: 2s
    route:
    - destination:
        host: project
        port:
          number: 10010
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: project
        port:
          number: 8080


# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: project-grpc
#   namespace: opr-develop
#   annotations:
#     kubectl.kubernetes.io/last-applied-configuration: |
#       {"apiVersion":"networking.istio.io/v1alpha3","kind":"VirtualService","metadata":{"name":"project-grpc","namespace":"opr-develop"}}
# spec:
#   gateways:
#   - istio-system/mimeo-gateway
#   hosts:
#   - develop.opr.s3gis.be
#   - web-develop.opr.s3gis.be
#   http:
#   - match:
#     - uri:
#         prefix: /
#     retries:
#       attempts: 3
#       perTryTimeout: 2s
#     route:
#     - destination:
#         host: project
#         port:
#           number: 10010  # Ensure this matches your GRPC service port
#   - match:
#     - uri:
#         prefix: /
#     retries:
#       attempts: 3
#       perTryTimeout: 2s
#     route:
#     - destination:
#         host: project
#         port:
#           number: 8080  # Ensure this matches your GRPC-Web service port
